@@ -62,7 +62,7 @@ extern NSString *NSPortTimeoutException; /* OPENSTEP */
 		  forMode: (NSString*)aMode;
 - (unsigned) reservedSpaceLength;
 - (BOOL) sendBeforeDate: (NSDate*)when
-	     components: (NSArray*)components
+	     components: (NSMutableArray*)components
 		   from: (NSPort*)receivingPort
 	       reserved: (unsigned) length;
 #endif
